# demo_voice_assistant

./: .dockerignore  .env.example  .gitignore  AGENT_INSTRUCTIONS.md  Best_Practices_Implemented.md  CODEOWNERS  DYNAMIC_TOOL_DISCOVERY.md  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  setup_project.sh  setup_uv.py
.github/actions/build-and-push-image/: action.yaml
.github/workflows/: release.yaml  test-release.yml
tests/: conftest.py  run_vad_tests.py  run_whisper_tests.py  test_agentic_system_metrics.py  test_core_functionality.py  test_tool_execution_fixes.py
tests/agent/: test_agent.py
tests/asr/: test_aggressive_deduplication.py  test_asr.py  test_corrected_isfinal_fix.py  test_deduplication_logic.py  test_dual_callback_system.py  test_duplication_fix.py  test_duplication_logic.py  test_google_speech_async_callback_comprehensive.py  test_google_speech_async_callback_fix.py  test_google_speech_async_callback_verification.py  test_google_speech_deduplication_fix.py  test_google_speech_response_structure.py  test_google_speech_v2_credentials.py  test_isfinal_attribute_fix.py  test_thread_safe_async_callback.py  test_transcription_deduplication.py  test_vad.py  test_whisper.py  test_whisper_stream.py
tests/gateway/: performance_metrics_export.json  test_assistant_transcript_separation.py  test_audio_session.py  test_audio_session_enhanced_flow.py  test_audio_track_processor.py  test_llm_integration_manager_v2.py  test_routes.py  test_runtime_config_asr_mode.py  test_spacy_semantic_checker.py  test_trace_websocket_protocol_v2.py  test_ui_display_fixes.py  test_utterance_boundary_decider.py  test_utterance_manager.py
tests/integration/asr/: test_complete_deduplication_fix.py  test_complete_fix_integration.py  test_complete_implementation.py  test_google_speech_async_callback_integration.py  test_implementation_verification.py
tests/integration/gateway/: test_utterance_boundary_integration.py
tests/integration/latency/: test_01_sentence_splitting.py  test_02_utterance_timeout.py  test_02_utterance_timeout_updated.py  test_performance_metrics.py
tests/llm/: test_agent_state.py  test_agentic_system.py  test_analyze_query_tool_selection.py  test_conversation_context.py  test_integration_langgraph.py  test_langgraph_workflow.py  test_langgraph_workflow_policy.py  test_model_detector.py  test_openai_client.py  test_persistence_manager.py  test_response_parser.py  test_session_trace_aggregator_tts.py  test_simple_integration.py  test_tool_discovery.py  test_tool_manager.py  test_tool_restrictions.py  test_tool_selector.py  test_trace_aggregator_v2.py  test_trace_recorder_v2.py  test_tracing_v2.py
tests/tts/: __init__.py  test_google_tts.py  test_markdown_stripping.py  test_response_reader.py  test_response_reader_tracing.py
