[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "grainger-voice-assistant"
version = "0.1.0"
description = "Voice-enabled product search assistant for Grainger"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.20.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "soundfile>=0.12.1",
    "scipy>=1.10.0",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=0.1.0",
    "aiosqlite>=0.20.0,<0.22.0",
    "aiortc>=1.5.0",
    "websockets>=11.0.0",
    "python-dotenv>=1.0.0",
    "google-cloud-speech>=2.21.0",
    "google-cloud-texttospeech>=2.14.0",
    "pydub>=0.25.1",
    "spacy>=3.7.0,<3.8.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
    # Agentic System Dependencies
    "openai>=1.3.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "tenacity>=8.2.0",
    "pydantic>=2.5.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.23.0",
    "pytest-timeout>=2.2.0",
    "black>=23.3.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
]
test = [
    "pytest>=7.3.1,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.23.0",
    "pytest-dependency>=0.5.1",
    "pytest-timeout>=2.2.0",
    "spacy>=3.7.0,<3.8.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
]

asr = []
nlp = [
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=0.1.0",
    "aiosqlite>=0.20.0,<0.22.0",
]

mcp = [
    "mcp>=0.1.0",
]

# Agentic System Dependencies
agentic = [
    "openai>=1.3.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "tenacity>=8.2.0",
    "pydantic>=2.5.0",
    "typing-extensions>=4.8.0",
]

tts = [
    "TTS>=0.22.0",
]

telephony = [
    "twilio>=8.10.0",
]

[dependency-groups]
dev = [
    "pytest>=7.3.1,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.23.0",
    "pytest-timeout>=2.2.0",
    "black>=23.3.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
]
test = [
    "pytest>=7.3.1,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.23.0",
    "pytest-dependency>=0.5.1",
    "pytest-timeout>=2.2.0",
    "spacy>=3.7.0,<3.8.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]  # Ignore line length warnings

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
asyncio_mode = "auto"
timeout = 60
timeout_method = "thread"

[tool.uv]
# UV-specific configuration
pip = { no-binary = [] }
